Bug 1652906 - Fix macOS implicit function declaration build error. rs=bustage-fix

read(), write(), close() are all from unistd.h.

--HG--
extra : rebase_source : 0e53ca4f986e1eeb10f918e987c663a35e2d8096